Create html elements object and word guess game object

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
     </section>
 
-    <section id="already-guessed">
+    <section id="guessed">
         <h3>Letters Already Guessed</h3>
-        <div class="already-guessed--letters">
+        <div class="guessed--letters">
         </div>
     </section>
 </div>
