--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <div class="container">
     <h1>Word Guess Game</h1>
     <h2>What's famous in Japan??</h2>
+    <p class="direction">Press any key to get started!</p>
+    <p class="warning"></p>
 
     <section id="wins">
         <h3>Wins</h3>
