--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game - What's Famous in Japan?</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+<!--    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
@@ -13,7 +13,6 @@
     <h1>Word Guess Game</h1>
     <h2>What's famous in Japan??</h2>
     <p class="direction">Press any key to get started!</p>
-    <p class="warning"></p>
 
     <section id="wins">
         <h3>Wins</h3>
