Change use of word from direction to message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <h1>Word Guess Game</h1>
     <h2>What's famous in Japan??</h2>
-    <p class="direction">Press any key to get started!</p>
+    <p class="message">Press any key to get started!</p>
 
     <section id="wins">
         <h3>Wins</h3>
