--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-<div class="container">
+<header>
     <h1>Word Guess Game</h1>
     <h2>What's famous in Japan??</h2>
+</header>
+
+<div class="container">
     <p class="message">Press any key to get started!</p>
 
     <section id="wins">
@@ -42,6 +45,8 @@
         </div>
     </section>
 </div>
+
+<footer></footer>
 
 <script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
