Style h3 elements and container

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game - What's Famous in Japan?</title>
-<!--    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">-->
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
@@ -18,13 +18,13 @@
     <p class="message">Press any key to get started!</p>
 
     <section id="wins">
-        <h3>Wins</h3>
+        <h3><span>Wins</span></h3>
         <div class="wins--num">
         </div>
     </section>
 
     <section id="current-word">
-        <h3>Current Word</h3>
+        <h3><span>Current Word</span></h3>
         <div class="current-word__display">
         </div>
         <div class="hint">
@@ -34,13 +34,13 @@
     </section>
 
     <section id="guesses-remain">
-        <h3>Number of Guesses Remaining</h3>
+        <h3><span>Number of Guesses Remaining</span></h3>
         <div class="guesses-remain--num">
         </div>
     </section>
 
     <section id="guessed">
-        <h3>Letters Already Guessed</h3>
+        <h3><span>Letters Already Guessed</span></h3>
         <div class="guessed--letters">
         </div>
     </section>
