--- a/index.html
+++ b/index.html
@@ -15,17 +15,24 @@
 </header>
 
 <div class="container">
-    <p class="message">Press any key to get started!</p>
+    <div class="message-container">
+        <svg class="message-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm48,226H216a16,16,0,0,1,0-32h28V244H228a16,16,0,0,1,0-32h32a16,16,0,0,1,16,16V332h28a16,16,0,0,1,0,32Z"/>
+        </svg>
+        <p class="message">
+            Press any key to get started!
+        </p>
+    </div>
 
     <section id="wins">
         <h3><span>Wins</span></h3>
-        <div class="wins--num">
+        <div class="wins--num value">
         </div>
     </section>
 
     <section id="current-word">
         <h3><span>Current Word</span></h3>
-        <div class="current-word__display">
+        <div class="current-word__display value">
         </div>
         <div class="hint">
             <h4 class="hint__header">Hint</h4>
@@ -35,13 +42,13 @@
 
     <section id="guesses-remain">
         <h3><span>Number of Guesses Remaining</span></h3>
-        <div class="guesses-remain--num">
+        <div class="guesses-remain--num value">
         </div>
     </section>
 
     <section id="guessed">
         <h3><span>Letters Already Guessed</span></h3>
-        <div class="guessed--letters">
+        <div class="guessed--letters value">
         </div>
     </section>
 </div>
